--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <script src="js/controllers/groupctrl.js"></script>
 <script src="js/controllers/rolectrl.js"></script>
 <script src="js/controllers/appctrl.js"></script>
+<script src="js/controllers/packagectrl.js"></script>
 <script defer="defer" src="js/ng-grid/flex-height.js"></script>
 <script defer="defer" src="js/controllers/schemactrl.js"></script>
 <script src="js/controllers/servicectrl.js"></script>
