--- a/navigation.html
+++ b/navigation.html
@@ -7,6 +7,6 @@
     <li onclick="setCurrentApp('files')" id="nav_files"><a href="#/file"><i class="icon icon-folder-open"></i> <span>Manage Files</span></a></li>
     <li onclick="setCurrentApp('schema')" id="nav_schema"><a href="#/schema"><i class="icon icon-table"></i> <span>Manage Data</span></a></li>
     <li onclick="setCurrentApp('docs')" id="nav_docs"><a ng-click="loadSwagger()" href="#/api"><i class="icon icon-book"></i> <span>API Documentation</span></a></li>
-    <li onclick="setCurrentApp('help')" id="nav_help"><a href="#/users"><i class="icon icon-question-sign"></i> <span>Help</span></a></li>
+    <li onclick="setCurrentApp('package')" id="nav_package"><a href="#/package"><i class="icon icon-gift"></i> <span>Package Apps</span></a></li>
 
 </ul>
