--- a/import.html
+++ b/import.html
@@ -2,14 +2,14 @@
 <div class="well" style=" height: 80%;padding: 10px;position: absolute;width: 100%;">
     <div class="section">
         <h5>Choose a local .dfpkg file to upload</h5>
-        <form class="form-inline" id="upload-file-form" name="upload-file-form"  ng-controller = 'FileCtrl' action="/rest/app/?app_name=admin" method="POST" enctype="multipart/form-data" target="importFileIframe">
+        <form class="form-inline" id="upload-file-form" name="upload-file-form"  ng-controller = 'FileCtrl' action="/rest/system/app/?app_name=admin" method="POST" enctype="multipart/form-data" target="importFileIframe">
             <input id="fileInput" type="file" name="files" style="width:300px;"/><button ng-click='uploadPackageFile()' class="btn btn-primary">Upload</button>
         </form>
         <iframe style="display:none" frameBorder="0" id="importFileIframe" name="importFileIframe" src="about:blank" onload="checkResults(this)" width="100%" height="70px"></iframe>
     </div>
     <div class="section">
         <h5><span style="font-weight:bold;">OR</span> enter the URL for a .dfpkg file</h5>
-        <form class="form-inline" id="upload-url-form" name="upload-url-form"  ng-controller = 'FileCtrl' action="/rest/app/?app_name=admin" method="POST" target="importUrlIframe">
+        <form class="form-inline" id="upload-url-form" name="upload-url-form"  ng-controller = 'FileCtrl' action="/rest/system/app/?app_name=admin" method="POST" target="importUrlIframe">
             <input id="urlInput" type="text" name="url" style="width:300px;"/>&nbsp;<button ng-click='uploadPackageUrl()' class="btn btn-primary">Upload</button><br/>
             <div>
                 Sample Apps:<br/>
