--- a/import.html
+++ b/import.html
@@ -14,11 +14,13 @@
             <div>
                 Sample Apps:<br/>
                 <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-helloworld/raw/master/helloworld.dfpkg')">Hello World</a>
-                - A tiny sample application showing how to make a RESTful call to your DreamFactory Services Platform (DSP).<br/>
+                - A tiny sample application showing how to make a single RESTful call to your DreamFactory Services Platform (DSP).<br/>
+                <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-todo/raw/master/todo.dfpkg')">Todo List</a>
+                - A simple AngularJS application showing how to create, update, and delete database records on your DSP.<br/>
                 <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-calendar/raw/master/calendar.dfpkg')">Calendar</a>
-                - A sample application showing how to perform CRUD operations on your DreamFactory Services Platform (DSP).<br/>
+                - Another sample application showing how to perform CRUD operations on your DSP.<br/>
                 <a href="" onclick="$('#urlInput').val('https://github.com/dreamfactorysoftware/app-swagger/raw/master/swagger.dfpkg')">Live API Docs</a>
-                - Live API documentation for the DreamFactory Services Platform (DSP), built with Swagger.
+                - Live API documentation for the DreamFactory Services Platform, built with Swagger.
             </div>
         </form>
         <iframe style="display:none" frameBorder="0" id="importUrlIframe" name="importUrlIframe" src="about:blank" onload="checkResults(this)" width="100%" height="70px"></iframe>
