replace lib/web-core with public/web-core for speed

--- a/filemanager/editor.html
+++ b/filemanager/editor.html
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="/lib/web-core/css/bootstrap.min.css" type="text/css"/>
-    <link rel="stylesheet" href="/lib/web-core/css/font-awesome.min.css" type="text/css"/>
+    <link rel="stylesheet" href="/public/web-core/css/bootstrap.min.css" type="text/css"/>
+    <link rel="stylesheet" href="/public/web-core/css/font-awesome.min.css" type="text/css"/>
     <!-- Standard CSS -->
     <style type="text/css" media="screen">
         #editor {
@@ -15,7 +15,7 @@
             left: 0;
         }
     </style>
-    <script src="/lib/web-core/js/utils.js"></script>
+    <script src="/public/web-core/js/utils.js"></script>
 </head>
 <body>
 <div id="editor"></div>
@@ -40,12 +40,12 @@
 
 <!-- DF Imports -->
 
-<script src="/lib/web-core/js/df.js"></script>
-<script src="/lib/web-core/js/utils.js"></script>
-<script src="/lib/web-core/js/jquery.js"></script>
-<script src="/lib/web-core/js/jquery-ui-1.9.2.custom.min.js"></script>
+<script src="/public/web-core/js/df.js"></script>
+<script src="/public/web-core/js/utils.js"></script>
+<script src="/public/web-core/js/jquery.js"></script>
+<script src="/public/web-core/js/jquery-ui-1.9.2.custom.min.js"></script>
 <script src="js/editor.js"></script>
 <script src="js/ace/ace.js"></script>
-<script src="/lib/web-core/js/bootstrap.min.js"></script>
+<script src="/public/web-core/js/bootstrap.min.js"></script>
 
 </html>
