--- a/filemanager/index.html
+++ b/filemanager/index.html
@@ -7,17 +7,17 @@
     <!-- Standard CSS -->
     <link rel="stylesheet" href="../css/themes/df-default/jquery-ui-1.9.1.custom.css" type="text/css" />
     <link rel="stylesheet" href="../css/layout.css" type="text/css"/>
-    <link rel="stylesheet" href="/lib/web-core/css/bootstrap.min.css" type="text/css"/>
-    <link rel="stylesheet" href="/lib/web-core/css/font-awesome.min.css" type="text/css"/>
+    <link rel="stylesheet" href="/public/web-core/css/bootstrap.min.css" type="text/css"/>
+    <link rel="stylesheet" href="/public/web-core/css/font-awesome.min.css" type="text/css"/>
     <link rel="stylesheet" href="css/base.css" type="text/css"/>
 
-    <script src="/lib/web-core/js/jquery.js"></script>
-    <script src="/lib/web-core/js/jquery-ui-1.9.2.custom.min.js"></script>
+    <script src="/public/web-core/js/jquery.js"></script>
+    <script src="/public/web-core/js/jquery-ui-1.9.2.custom.min.js"></script>
 
     <!-- DF Imports -->
-    <script src="/lib/web-core/js/df.js"></script>
-    <script src="/lib/web-core/js/utils.js"></script>
-    <script src="/lib/web-core/js/bootstrap.min.js"></script>
+    <script src="/public/web-core/js/df.js"></script>
+    <script src="/public/web-core/js/utils.js"></script>
+    <script src="/public/web-core/js/bootstrap.min.js"></script>
 
     <!-- DF FileManager -->
     <script src="js/filemanagement.js"></script>
