added requires_fullscreen boolean to scope / form

--- a/applications.html
+++ b/applications.html
@@ -110,7 +110,9 @@
                                 {{app.url}}
                             </div>
                         </div>
-
+                        <div class="section form-inline">
+                            <input type="checkbox" ng-model="app.requires_fullscreen">&nbsp;Run Full Screen
+                        </div>
                         <div class="section">
                             Assign this app to a role(s).
 
