making item list stretch on all pages, soon to stretch to window size.

--- a/users.html
+++ b/users.html
@@ -1,7 +1,7 @@
 <table style="width:100%" ng-controller="UserCtrl">
     <tr>
-        <td id="item-list">
-            <div id="grid-table" class="well" >
+        <td id="item-list" class="well">
+            <div id="grid-table" >
                 <table id="app-list" class="table table-hover table-striped">
                     <thead>
                     <tr>
