added ng-checked for fullscreen

--- a/applications.html
+++ b/applications.html
@@ -111,7 +111,7 @@
                             </div>
                         </div>
                         <div class="section form-inline">
-                            <input type="checkbox" ng-model="app.requires_fullscreen">&nbsp;Run Full Screen
+                            <input type="checkbox" ng-checked="app.requires_fullscreen == 1" ng-model="app.requires_fullscreen">&nbsp;Run Full Screen
                         </div>
                         <div class="section">
                             Assign this app to a role(s).
