Added system config.

--- a/navigation.html
+++ b/navigation.html
@@ -8,5 +8,6 @@
     <li onclick="setCurrentApp('schema')" id="nav_schema"><a href="#/schema"><i class="icon icon-table"></i> <span>Manage Schema</span></a></li>
     <li onclick="setCurrentApp('docs')" id="nav_docs"><a ng-click="loadSwagger()" href="#/api"><i class="icon icon-book"></i> <span>API Documentation</span></a></li>
     <li onclick="setCurrentApp('package')" id="nav_package"><a href="#/package"><i class="icon icon-gift"></i> <span>Package Apps</span></a></li>
+    <li onclick="setCurrentApp('config')" id="nav_config"><a href="#/config"><i class="icon icon-cogs"></i> <span>System Config</span></a></li>
 
 </ul>
