--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <script src="js/controllers/rolectrl.js"></script>
 <script src="js/controllers/appctrl.js"></script>
 <script src="js/controllers/packagectrl.js"></script>
+<script src="js/controllers/config.js"></script>
 <script defer="defer" src="js/ng-grid/flex-height.js"></script>
 <script defer="defer" src="js/controllers/schemactrl.js"></script>
 <script src="js/controllers/servicectrl.js"></script>
