--- a/config.html
+++ b/config.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <br/>
-                <button ng-click="save()" class="btn btn-info">Save</button>
+                <button ng-click="save()" class="btn btn-primary">Save</button>
             </div>
         </td>
     </tr>
