--- a/schema.html
+++ b/schema.html
@@ -16,8 +16,8 @@
                         <td ng-click="showData()">{{table.name}}</td>
                         <td class="no-border">
                             <div class="btn-group">
-                                <a ng-click="showSchema()" class="btn btn-small btn-inverse"><i class="icon-edit"></i></a>
-                                <a class="btn btn-small btn-inverse" ng-click="delete()"><i class="icon-trash"></i></a>
+                                <a ng-click="showSchema()" class="btn btn-small btn-inverse" title="Edit schema"><i class="icon-edit"></i></a>
+                                <a class="btn btn-small btn-inverse" title="Delete this table" ng-click="delete()"><i class="icon-trash"></i></a>
                             </div>
                         </td>
                     </tr>
