--- a/applications.html
+++ b/applications.html
@@ -7,7 +7,7 @@
                     <tr>
                         <th>App Label</th>
 
-                        <th class="no-border"><a class="btn btn-inverse btn-small pull-right" ng-click="reload()"><i
+                        <th class="no-border"><a class="btn btn-inverse btn-small pull-right" title="Refresh list" ng-click="reload()"><i
                                 class="icon-refresh"></i></a></th>
                     </tr>
                     </thead>
@@ -17,12 +17,12 @@
                         <td ng-click="showDetails()">{{app.name}}</td>
                         <td class="no-border">
                             <div class="btn-group pull-right">
-                                <a class="btn btn-small btn-inverse" ng-click="showAppPreview()"><i
+                                <a class="btn btn-small btn-inverse" title="Preview this app" ng-click="showAppPreview()"><i
                                         class="icon-eye-open"></i></a>
                                 <a ng-show="app.is_url_external == 0" class="btn btn-small btn-inverse"
-                                   ng-click="showFileManager()"><i
+                                   title="Manage app files" ng-click="showFileManager()"><i
                                         class="icon-folder-open"></i></a>
-                                <a class="btn btn-small btn-inverse" ng-click="delete()"><i class="icon-trash"></i></a>
+                                <a class="btn btn-small btn-inverse" title="Delete this app" ng-click="delete()"><i class="icon-trash"></i></a>
                             </div>
                         </td>
                     </tr>
