--- a/groups.html
+++ b/groups.html
@@ -15,10 +15,8 @@
 						<tr ng-repeat="group in Groups.record" id="row_{{group.id}}">
 							<td ng-click="showDetails()">{{group.name}}</td>
 							<td class="no-border">
-								<div class="btn-group">
-									<a class="btn btn-small btn-inverse"><i class="icon-edit"></i></a> <a class="btn btn-small btn-inverse"
-																										  ng-click="delete()"><i
-									class="icon-trash"></i></a>
+                                <div class="btn-group pull-right">
+									<a class="btn btn-small btn-inverse"  title="Delete this group" ng-click="delete()"><i class="icon-trash"></i></a>
 								</div>
 							</td>
 						</tr>
