--- a/schema.html
+++ b/schema.html
@@ -5,7 +5,7 @@
                 <table id="app-list" class="table table-hover table-striped">
                     <thead>
                     <tr>
-                        <th>Table Name</th>
+                        <th>Table&nbsp;<small style="font-weight:normal">(Click to browse data)</small></th>
 
                         <th class="no-border"></th>
                     </tr>
