Some direction on editing schema

--- a/schema.html
+++ b/schema.html
@@ -43,6 +43,10 @@
             <div>
                 <div class="detail-view">
                     <div id="grid-container">
+                        <div class="alert alert-info">
+                            <li class="icon-info-sign"></li>
+                            &nbsp;View / Edit your database schema below. The first row is used to add a new field.
+                        </div>
                         <div id="schema-main" ng-grid="browseOptions"></div>
                     </div>
                     <div id="create-form">
