Some direction on JSON upload

--- a/schema.html
+++ b/schema.html
@@ -147,7 +147,7 @@
                     </style>
 
 
-                    <h5>Enter JSON Schema</h5>
+                    <div class="alert alert-info">Paste your JSON Schema below, Click Validate to use JSONlint before creating.</div>
 
                     <textarea id="source" rows="20" cols="50"></textarea>
 
@@ -158,7 +158,7 @@
                     <h2>Results</h2>
                     <pre id="result"></pre>
                     <p>
-                        <button class="btn btn-primary" ng-click="postJSON()" class="icon-save"> Create Table</button>
+                        <button class="btn btn-primary" ng-click="postJSON()" class="icon-save"> Create Table(s)</button>
                     </p>
                 </div>
 
